--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -2,7 +2,7 @@
 <ul>
     <li>Computer Games
         <ul>
-            <li>DOTA</li>
+            <li>DOTA 2</li>
             <li>Valorant</li>
             <li>Dead Island 2</li>
             <li>PUBG</li>
@@ -23,5 +23,6 @@
     <li>Watching Anime</li>
     <li>Basketball</li>
     <li>Biking</li>
+
 
 </ul>
